# 01.1.homework

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: release.yaml
lib/: CMakeLists.txt  lib.cpp  lib.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  conanfile.txt  test_version_boost.cpp  test_version_gtest.cpp  version_boost.cpp  version_gtest.cpp
